<resources>
    <string name="app_name">Mauritius Wild Life</string>
    <string name="who_nare_we">WHO ARE WE?</string>
    <string name="discover">DISCOVER</string>
    <string name="who_are_we_dashboard">Who_are_we_dashboard</string>
    <string name="our_necotour">OUR ECOTOUR</string>
    <string name="our_nprojects">OUR PROJECTS</string>
    <string name="logo">logo</string>
    <string name="how_to_nhelp">HOW TO HELP?</string>
    <string name="our_nshops">OUR SHOPS</string>
    <string name="contact_nus">CONTACT US</string>
    <string name="follow_nus">FOLLOW US</string>
    <string name="terms_and_nconditions">TERMS AND\nCONDITIONS</string>
    <string name="settings">SETTINGS</string>
    <string name="flora">FLORA</string>
    <string name="mauritius_rare_plant">Mauritius Rare Plant</string>
    <string name="rodrigue_rare_plant">Rodrigue Rare Plant</string>
    <string name="fauna">FAUNA</string>
    <string name="echo_parakeet">Echo Parakeet</string>
    <string name="kestrel">Kestrel</string>
    <string name="tortoise_rewilding">Tortoise Rewilding</string>
    <string name="ornate_day_gecko">Ornate Day Gecko</string>
    <string name="telfair_skink">Telfair Skink</string>
    <string name="islets">ISLETS</string>
    <string name="ile_cocos">Ile Cocos</string>
    <string name="round_island">Round Island</string>
    <string name="iaa">Ile Aux Aigrettes</string>
    <string name="x">X</string>
    <string name="pink_pigeon">Pink Pigeon</string>
    <string name="back_button">back_button</string>
    <string name="how_you_can_help">How you can help</string>
    <string name="what_we_do">
        The Mauritian Wildlife Foundation is the only non-governmental organisation (NGO) in Mauritius to be exclusively concerned with the conservation of the endangered endemic plants and animals of Mauritius.

        \n\n

        <b>Our achievements</b> \n

        The work carried out in Mauritius is one of the world\'s most successful conservation stories.
        This is due to MWF\'s restoration work started in the 1970s, which has succeeded in rescuing the Mauritius Kestrel, Echo Parakeet and Pink Pigeon, from the brink of extinction.
        We also develop protocols for the rescue of native plant species and we work in Rodrigues restoring the flora and fauna, replanting the native forest.
        MWF has been actively involved with island restoration in particular on Ile aux Aigrettes and Round Island, both of which contain highly threatened biodiversity of global importance.
        These conservation efforts will benefit future generations of Mauritians.
        MWF promotes local capacity building and provides local employment through its activities.
        MWF continues to flourish as a strong, vibrant and innovative organisation.
    </string>
    <string name="what_is_our_mission">
        <b>The Mauritian Wildlife Foundation (MWF) is the only non-governmental organization (NGO) in Mauritius to be exclusively concerned with the conservation and preservation of the nation\'s endangered plant and animal species.</b>

        \n\n

        Our goals: \n

        - To save threatened Mauritian species through the restoration of entire ecosystems. \n

        - To seek new information through field research, data management, captive studies and scientific collaboration for direct application to restoration methods and management. \n

        - To share knowledge gained through restoration programmes with fellow Mauritian and international conservationists. \n

        - To share the joys and benefits of native wilderness and wildlife with the Mauritian people. \n

        - To secure the future of Mauritian species through income generation and sound management of human, fiscal and capital resources. \n

        \n\n

        Our hands-on conservation projects are carried out in Mauritius including the offshore islets and Rodrigues.
        We work closely with local and international partners, with the long-term aim of recreating lost ecosystems by saving some of our rarest species from extinction and restoring the native forest.
        Another important part of our work is to raise awareness about conservation issues through our education programme.
    </string>
    <string name="contact_us_mauritius">
        <b>MAURITIUS</b>

        \n\n

        For all enquiries, suggestions or complaints concerning the Mauritian Wildlife Foundation, please email to: executive@mauritian-wildlife.org
        Or send in writing addressed to: \n\n
        <i>
            Executive Director, \n
            Mauritian Wildlife Foundation, \n
            Grannum Road, Vacoas 73418 \n
        </i>

        \n

        <b>Tel:</b> (230) 697-6097 \n
        <b>Fax:</b> (230) 697-6512 \n
        <b>Email:</b> executive@mauritian-wildlife.org
    </string>
    <string name="contact_us_rodrigues">
        <b>RODRIGUES</b>

        \n\n

        Mauritian Wildlife Foundation \n
        Grande Montagne

        \n\n

        <b>Tel:</b> (230) 831-4862 \n
        <b>Fax:</b> (230) 831-4862 \n
        <b>Email:</b> grandemont@mauritian-wildlife.org
    </string>
    <string name="how_to_help_text">
        MWF NEF/CSR Reg. Nr 1070
        CORPORATE SOCIAL RESPONSIBILITY

        \n\n

        Since 2009, the Government of Mauritius has established a policy with the overall objective of mandating registered companies to pay 2% of their book profit towards programmes that contribute to the social and environmental development of the country. Commonly known as Corporate Social Responsibility (CSR), it is the concept whereby companies act to balance their own economic growth with the sustainable social and environmental development of their areas of operation. A company performing highly in CSR is one that goes beyond compliance with the legal framework to actively pursue positive impacts on local communities and its environmental footprint. In 2015, the existing guidelines have been abolished with the simplification of the procedures. There are no more priority areas and companies have more freedom to decide as long as they meet the new Income Tax amendment act of 2015 summarised as follows:

        \n\n

        Every company shall in every year set up a CSR Fund equivalent to 2 per cent of its chargeable income of the preceding year to implement a CSR Programme in accordance with its own CSR framework. A CSR programme should have as objects the alleviation of poverty, the relief of sickness or disability, the advancement of education of vulnerable persons or the promotion of any other public object beneficial to the Mauritian community; Companies now need to submit to the MRA as an annex to their return of income a statement showing the amount of CSR spent and the details of CSR projects implemented by the company during the income year.

        \n\n

        All our programs qualify for CSR credential number: 501 Protection and preservation of the environment : Biodiversity.
        For further information please contact our CSR team:  Email: fundraising@mauritian-wildlife.org or call (230) 697 6117
        Also see the website: www.nef.mu
    </string>
    <string name="ile_aux_aigrettes">
                Ile aux Aigrettes is a small (27 ha) island situated in the Mahebourg Bay, about 850 m off the south-east coast of Mauritius. Unlike the mainland which is of volcanic origin, Ile aux Aigrettes is made up of coralline limestone. It is home to the last remnants of dry coastal forest, once found around most of Mauritius.
        \n\n
        Like the mainland, Ile aux Aigrettes was affected by tree logging and land clearance, and the introduction of exotic animal and plant species almost destroyed the native fauna and flora. In 1965 the island was declared a nature reserve and our intense conservation efforts have resulted in the restoration of the forest and reintroduction of rare species that had long since disappeared from the island.
         \n\n
        Visitors to the island are encouraged and can take part in one of our tour options:
        \n 1. Our standard ecotour provides a guided trail around the sites of interest on the island, lasting approx. 1.5 to 2 hours, with a short boat trip to and from the island (see full details below).
        \n 2. Our tailor-made tours can be booked in advance to cater for any special interests that you might have, such as photography or birdwatching, for example. Please contact us to discuss your particular needs and interests.
        \n 3. Primary and secondary school pupils can visit the island under our specially designed Learning with Nature programme, click here for more information.
    </string>
    <string name="conservationist_for_a_day">
        Our exclusive Conservationist for a day experience on Ile aux Aigrettes Nature Reserve gives you a once in a lifetime opportunity to see what it is like to work to preserve our natural heritage.
        \n\n
        Your programme for the day will be tailor made according to your interests but would usually include working on 3 to 4 different fauna and flora projects.
        \n\n
        Lunch is provided but optional.
        \n\n
        Price: 1-2 persons Rs6000
        \n\n
        Additional person: Rs500
        \n\n
        Maximum in a group: 4
        \n\n
        Prices include lunch
        \n\n
        Departure time: 9 a.m-4 p.m
        \n\n
        Conditions: Same as Petrin
        \n\n
        Recommendations: Walking shoes, hats, raincoat, mosquito repellent.
        \n\n
        <b>How to book</b>
        \n\n
        To avoid disappointment, please book your tour in advance by:
        \n\n
        • WhatsApp: 5258 81 39\n
        • phone on  (230) 631 2396 or (230) 52 58 81 39 (mobile),\n
        • email at  reservation@mauritian-wildlife.org \n\n

        Or pop in to our visitor centre and booking office at the departures point on the mainland at Pointe Jerome, Mahebourg.

    </string>
    <string name="grandbaieShop">SUPER U GRAND BAIE KIOSK</string>
    <string name="shopAddress1">ADDRESS\n\nSuper U Grand Bay La Salette Road, Grand Bay, Mauritius</string>
    <string name="view_brochure">View Brochure</string>
    <string name="ile_aux_aigrettes_shop">ILE AUX AIGRETTES VISITORS\' SHOP</string>
    <string name="shopAddress2">ADDRESS\n\nIle Aux Aigrettes</string>
    <string name="mwf_head_office">MWF HEAD OFFICE</string>
    <string name="shopAddress3">ADDRESS\n\nMauritian Wildlife Foundation Grannum Road Vacoas Mauritius</string>
</resources>